# VisionCluster

./: README.md  Vision Clust6er.ipynb  VisionCluster.ipynb  barrettII_eyes_clustering.xlsx  pyproject.toml
