[tool.poetry]
name = "visioncluster"
version = "0.1.0"
description = ""
authors = ["ecaf1 <edeilsonazevedo22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
setuptools = "^69.1.1"
seaborn = "^0.13.2"
scikit-learn-extra = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
